--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,5 @@
-<h2><%= @project.name %></h2>
+<h2><%= @book.name %></h2>
+<p>
+   Total Pages: <%= @book.pages %><br /> 
+   Current Page: <%= @book.current_page %>
+</p>
