Added links to book list

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,5 @@
    Total Pages: <%= @book.pages %><br /> 
    Current Page: <%= @book.current_page %>
 </p>
-<%= link_to "Read", read_book_path(@book) %>
+<%= link_to "Read", read_book_path(@book) %> <br /><br /><br />
+<%= link_to "Back to All Books", list_book_path %>
