--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
+<%= link_to "Home", list_book_path, :class => 'brand' %>
 <ul class="nav">
    <li>
       <a href="/">nowhere</a>
