Updated to rails 4, ruby 2

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Home", list_book_path, :class => 'brand' %>
-<ul class="nav">
+<ul class="nav navbar-nav">
    <li>
       <a href="/">nowhere</a>
    </li>
