--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,16 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
-        <div class="container">
-          <%= render 'layouts/navigation' %>
-        </div>
-      </nav>
-    </header>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <%= render 'layouts/navigation' %>
+      </div>
+    </nav>
     <main role="main">
       <div class="container">
         <div class="content">
            <div class="row">
-            <div class="span12">
+            <div class="lg-12">
               <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
