--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @book.name %></h2>
+<h2><%= @book.title %></h2>
 <p>
    Total Pages: <%= @book.pages %><br /> 
    Current Page: <%= @book.current_page %>
