--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,8 @@
 <h2>New book</h2>
 <%= form_for(@book) do |f| %>
    <p>
-      <%= f.label :name %><br />
-      <%= f.text_field :name %><br />
+      <%= f.label :title %><br />
+      <%= f.text_field :title %><br />
    </p>
 
    <p>
