--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.current-book {
+  text-align:center;
+  h1 {font-size:45px;}
+  .current-page {
+    font-size:22px;
+    .number { font-size: 36px; font-weight:bolder; display:inline;}
+  }
+  input[type="text"] { display:block; font-size:36px; margin:auto; margin-top:10px; margin-bottom:10px; width:50%;}
+}
