--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -11,3 +11,10 @@
   }
   input[type="text"] { display:block; font-size:36px; margin:auto; margin-top:10px; margin-bottom:10px; width:50%;}
 }
+
+h3 { text-align: center}
+
+.stats {
+  text-align:center;
+  .stat-number { font-size: 24px; font-weight:bold}
+}
