--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= books_path%>">DogEar</a>
+      <%= link_to "Sign up", new_user_path %>
     </div>
   </div>
 </div>
