--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= books_path%>">DogEar</a>
       <%= link_to "Sign up", new_user_path %>
+      <%= link_to "Sign in", sign_in_path %>
     </div>
   </div>
 </div>
