--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -18,3 +18,8 @@ h3 { text-align: center}
   text-align:center;
   .stat-number { font-size: 24px; font-weight:bold}
 }
+
+.open-books {
+  text-align:center;
+  .book {font-size: 24px;}
+}
