Fixed utc time bug with book stats

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -26,11 +26,11 @@
           .stat-word days left
       .stat
         .stat-number
-          = (Date.today-@book.started_at.to_date).to_i
+          = (Time.now.utc.to_date-@book.started_at.to_date).to_i
         .stat-word days in
 
 - if @book.updated_at > 5.minutes.ago
-  .row
+  .row.center
     .col-xs-12.col-lg-6
       hr
       = form_for(@book, url: finish_book_path, method: 'patch') do
