--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
 .row
-  .col-xs-12.col-lg-6.current-book
+  .std-col.current-book
     h1
       = @book.title
     .current-page
@@ -12,7 +12,7 @@
       =book.text_field :current_page, placeholder: page_placeholder(@book), value:nil
       button.btn.btn-danger.btn-lg type="submit" Submit
 
-  .col-xs-12.col-lg-6.stats
+  .std-col.stats
     hr
     h3 Stats for #{@book.title}
     .stats
@@ -31,8 +31,8 @@
         .stat-word days in
 
 - if @book.updated_at > 5.minutes.ago
-  .row.center
-    .col-xs-12.col-lg-6
+  .row
+    .std-col
       hr
       = form_for(@book, url: finish_book_path, method: 'patch') do
         button.btn.btn-danger.btn-lg type="submit" Finish
