--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -8,7 +8,7 @@
     font-size:22px;
     .number { font-size: 36px; font-weight:bolder; display:inline;}
   }
-  input[type="text"] { display:block; font-size:36px; margin:auto; margin-top:10px; margin-bottom:10px; width:50%;}
+  input[type="text"] { text-align: center; display:block; font-size:36px; margin:auto; margin-top:10px; margin-bottom:10px; width:50%;}
 }
 
 h3 { text-align: center}
@@ -19,4 +19,11 @@ h3 { text-align: center}
 
 .open-books {
   .book {font-size: 24px;}
+}
+
+
+.new-book {
+  input[type="text"] { text-align:center; display:block; font-size:36px; margin:auto; margin-top:10px; margin-bottom:10px; width:70%;}
+  .pages { width:20% !important;}
+  .checkbox {min-height:80px; min-width:80px;}
 }
