Update old test

--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -17,7 +17,7 @@ h3 { text-align: center}
   .stat-number { font-size: 24px; font-weight:bold}
 }
 
-.open-books {
+.book-list {
   .book {font-size: 24px;}
 }
 
