Removed Stats header on show page

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -14,7 +14,7 @@
 
   .std-col.stats
     hr
-    h3 Stats for #{@book.title}
+    /h3 Stats for #{@book.title}
     .stats
       .stat
         .stat-number
