--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,13 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
+.row
+  .std-col.col-lg-offset-3
+    h1 Welcome to DogEar
+    p DogEar is a simple app to keep track of basic stats about your reading.  You tell it what page
+      you're on as you're reading and it tells you when you'll finish and how fast you're reading.
+      It also keeps track of how many books and total pages you've read.
+
+    p You almost certainly don't need it.
+
+    p
+      | Convinced?
+    p
+      = link_to 'Sign Up Here', new_user_path
