Added basic read stats to main page for finished books.

--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -27,3 +27,9 @@ h3 { text-align: center}
   .pages { width:20% !important;}
   .checkbox {min-height:80px; min-width:80px;}
 }
+
+.finished-book-list {
+
+  a {font-size:24px;}
+  .finished-book-stats {text-align:center;}
+}
