--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -36,5 +36,11 @@
       hr
       = form_for(@book, url: finish_book_path, method: 'patch') do
         button.btn.btn-danger.btn-lg type="submit" Finish
+.row
+  .std-col.graphs
+    h3 History
+    = line_chart @graph_data
+
+
 
 
