Add graphs to finished books

--- a/app/views/books/show_finished.html.slim
+++ b/app/views/books/show_finished.html.slim
@@ -30,3 +30,7 @@
         button.btn.btn-danger.btn-lg type="submit" Finish
 
 
+.row
+  .std-col.graphs
+    h3 History
+    = line_chart @graph_data
