Sessions to resource, fix test deprecations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <!--<p class="navbar-text navbar-right">Sign in</p>-->
         <!--<p class="navbar-text navbar-right">Sign up</p>-->
       <%= link_to "Sign up", new_user_path, {class: 'navbar-text navbar-right'} %>
-      <%= link_to "Sign in", sign_in_path, {class: 'navbar-text navbar-right'} %>
+      <%= link_to "Sign in", new_session_path, {class: 'navbar-text navbar-right'} %>
       <% end %>
     </div>
   </div>
