--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= books_path%>">DogEar</a>
       <% if current_user %>
-        <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link"><%=current_user.name%></a></p>
+        <p class="navbar-text navbar-right">
+          Signed in as <a href="#" class="navbar-link"><%=current_user.name%></a>
+          <%= link_to "Sign out", session_path, method: :delete  %>
+        </p>
       <% else %>
         <!--<p class="navbar-text navbar-right">Sign in</p>-->
         <!--<p class="navbar-text navbar-right">Sign up</p>-->
