--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html[lang="en"]
     meta[name="author" content=""]
     title
       = content_for?(:title) ? yield(:title) : "DogEar"
+    = favicon_link_tag 'favicon.ico'
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "//www.google.com/jsapi", "chartkick"
     = javascript_include_tag "application"
