--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -17,18 +17,16 @@
 .row
   .std-col.finished-book-list id="finished-books"
     h2 Finished Books
-    - year = nil
-    - @finished_books.each do |book|
-      - if year != book.updated_at.year
-        - year = book.updated_at.year
-        h2.year = year
-      div.book
-        =link_to book.title, book
-        .finished-book-stats
-          strong => book.pages
-          | pages | #{book.started_short} - #{book.finished_short} |&nbsp;
-          strong =< book.pace
-          | pg/day
+    - @finished_books.each do |year, books|
+      h2.year = "#{year} (#{books.count})"
+      - books.each do |book|
+        div.book
+          =link_to book.title, book
+          .finished-book-stats
+            strong => book.pages
+            | pages | #{book.started_short} - #{book.finished_short} |&nbsp;
+            strong =< book.pace
+            | pg/day
 
 
 
